src/test/ui/lifetimes/issue-79187.stderr
error[E0308]: mismatched types
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^ lifetime mismatch
   |
   = note: expected type `FnOnce<(&u32,)>`
              found type `FnOnce<(&u32,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-79187.rs:4:13
   |
LL |     let f = |_| ();
   |             ^^^^^^
note: the lifetime requirement is introduced here
  --> $DIR/issue-79187.rs:1:18
   |
LL | fn thing(x: impl FnOnce(&u32)) {}
   |                  ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
